tests/snapshots/construction_derive__construction_derive_fail.snap
---
source: tests/construction_derive.rs
expression: response
---
Err(
    MalformedPublicKey(
        "Invalid length for hex",
    ),
)
