tests/snapshots/construction_derive__construction_derive_success.snap
---
source: tests/construction_derive.rs
expression: response
---
Ok(
    ConstructionDeriveResponse {
        address: None,
        account_identifier: Some(
            AccountIdentifier {
                address: "B62qkUHaJUHERZuCHQhXCQ8xsGBqyYSgjQsKnKN5HhSJecakuJ4pYyk",
                sub_account: None,
                metadata: Some(
                    Object {
                        "token_id": String("wSHV2S4qX9jFsLjQo8r1BsMLH2ZRKsZx6EJd1sbozGPieEC4Jf"),
                    },
                ),
            },
        ),
        metadata: None,
    },
)
