tests/snapshots/construction_derive__construction_derive_token_id_fail.snap
---
source: tests/construction_derive.rs
expression: response
---
Err(
    MalformedPublicKey(
        "Input too short",
    ),
)
